Fix turbo mode text color to adapt to light/dark mode

--- a/src/pages/bot-builder/toolbar/toolbar.scss
+++ b/src/pages/bot-builder/toolbar/toolbar.scss
@@ -173,10 +173,10 @@
                 align-items: center;
                 gap: 0.8rem;
                 white-space: nowrap;
-                color: var(--text-colored-background);
+                color: var(--text-prominent);
 
                 span {
-                    color: var(--text-colored-background);
+                    color: var(--text-prominent);
                 }
             }
 
