--- a/src/pages/bot-builder/toolbox/toolbox.scss
+++ b/src/pages/bot-builder/toolbox/toolbox.scss
@@ -27,7 +27,7 @@
             gap: 8px;
             font-weight: bold;
             font-size: 14px;
-            color: var(--text-colored-background);
+            color: var(--text-prominent);
         }
 
         .dc-toggle-switch__label {
